// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionExplorerLink should render a 'block' link 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 flex-shrink overflow-hidden whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Block ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 fCYCVa group"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="block-link}"
          >
            <span
              class="break-all border-b border-transparent transition-colors duration-200 border-current border-dotted group-hover:border-transparent"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-primary-700"
                data-testid="TruncateMiddle"
              >
                test-id
              </span>
            </span>
            <span
              class="align-middle"
            >
              <div
                class="sc-bdfBwQ fPrsah flex-shrink-0 inline-block pb-px text-sm"
                data-testid="Link__external"
                height="1em"
                width="1em"
              >
                <svg>
                  redirect.svg
                </svg>
              </div>
            </span>
          </a>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none group"
              data-testid="clipboard__wrapper"
              type="button"
            >
              <div
                class="absolute inset-0 -m-1 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
              />
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionExplorerLink should render a 'transaction' link 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 flex-shrink overflow-hidden whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 fCYCVa group"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="transaction-link}"
          >
            <span
              class="break-all border-b border-transparent transition-colors duration-200 border-current border-dotted group-hover:border-transparent"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-primary-700"
                data-testid="TruncateMiddle"
              >
                test-id
              </span>
            </span>
            <span
              class="align-middle"
            >
              <div
                class="sc-bdfBwQ fPrsah flex-shrink-0 inline-block pb-px text-sm"
                data-testid="Link__external"
                height="1em"
                width="1em"
              >
                <svg>
                  redirect.svg
                </svg>
              </div>
            </span>
          </a>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none group"
              data-testid="clipboard__wrapper"
              type="button"
            >
              <div
                class="absolute inset-0 -m-1 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
              />
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
